content/documentation/mocha/5.5.2/UserGuide/en_US/licensing.adoc
== Installing Node-Locked Licenses


=== Node-locked Installation

. Make sure you have downloaded the correct version of mocha for your operating system. The licensing system for this version is different from v4 and earlier.
. Make that your version of mocha is the product you have purchased (You will not be able to use a mocha Pro AVX Plugin activation code for mocha Pro standalone unless you have a multi-host license for example.).
. You will need to install the mocha package:
	* Apple OS: Double-click the dmg package and drag the application to your application folder
	* Windows: Double-click the exe package and follow the instructions
	* Linux: Double-click the installation rpm file and follow the on screen instructions. (64-bit versions of the software will not run on a 32-bit version of Linux).

==== Standard Node-Locked License Activation for mocha Pro Standalone

When you purchase your license, you will be emailed a serial number. To activate:

. Make sure you are connected to the internet
. Open mocha and choose 'Activate' from the welcome screen or 'Licensing' from the help menu.
image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_activation_welcome_screen.jpg[width="60%"]
. Fill out the registration details on the main page
image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_license_serial_dialog_page_01.jpg[width="60%"]
. Paste the serial number into the available activation field and click 'Next'
. Your details will appear on the next page. Click 'Activate' to install the license.
image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_license_serial_dialog_page_02.jpg[width="60%"]
. Your license should install automatically and mocha will close.
. Reopen mocha to start using your licensed version!

If your machine is not connected to the internet, or you are behind a firewall:

. Open mocha and choose 'Activate' from the welcome screen or 'Licensing' from the help menu.
. Fill out the registration details on the main page
. Paste the serial number into the available activation field and click 'Next'
. Your details will appear on the next page.
. Click 'Alternative Activation' to install the license.
. An Unique Product ID code will appear. Copy this code and send it to the customer support contacts listed in the dialog:
image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_license_serial_alternate_activation.jpg[width="60%"]
. Your license should install automatically and mocha will close.
. Reopen mocha to start using your licensed version!

==== Standard Node-Locked License Activation for mocha Pro Plugin

First locate the licensing button for your host plugin.

===== Adobe After Effects Plugin License

For After Effects this is called "License..." and sits on the bar of the effect title in your Effect Controls:
image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_ae_plugin_license_control.jpg[width="60%"]

===== Adobe Premiere Plugin License

For Premiere, click the small icon next to the effect title:
image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_premiere_plugin_license_control.jpg[width="60%"]

===== Avid Media Composer

For Avid, click the 'License Control' checkbox under the 'License and Registration' section at the bottom of the plugin controls:
image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_avid_plugin_license_control.jpg[width="60%"]

After that, the rest is the same as the process above for mocha standalone. See "Standard Node-Locked License Activation for mocha Pro Standalone" for more details.

We recommend restarting the host if you see any issues with licensing.


==== Node-Locked License Troubleshooting

. It is important that your mocha software matches your activation code, so check your purchase order to make sure everything matches up version wise. It may be that you don’t have the correct version of mocha installed from our download section. This is especially important for legacy software before V5, where a different licensing method is used.
. If you are attempting to install via a terminal instead of directly on the machine itself and you are having trouble getting mocha to install, try installing directly on the machine.
. Check to make sure you are not restricted to using certain ports due to a firewall or other admin permissions. When in doubt, temporarily turn your firewalls off for the duration of the installation and then turn them back on when you are done.
. Troubleshoot your machine; try uninstalling all your mocha software, restarting your machine, and installing the software again from scratch, and make sure you follow installation directions off our website exactly. It sounds redundant, but sometimes it’s a great way to figure out what is going on inside your machine.
. If all else fails, our support team is happy to help you figure this out. Please follow the link: https://borisfx.com/support/open-a-case/[contact support]!
