content/documentation/mocha/6.0.0/UserGuide/en_US/licensing.adoc
== Installing Node-Locked Licenses


=== Node-locked Installation

. Make sure you have downloaded the correct version of Mocha for your operating system. The licensing system for this version is different from v5 and earlier.
. Make that your version of Mocha is the product you have purchased (You will not be able to use a Mocha Pro AVX Plugin activation code for Mocha Pro standalone unless you have a multi-host license for example.).
. You will need to install the Mocha package:
	* Apple OS: Double-click the dmg package and drag the application to your application folder
	* Windows: Double-click the exe package and follow the instructions
	* Linux: Double-click the installation rpm file and follow the on screen instructions. (64-bit versions of the software will not run on a 32-bit version of Linux).

==== Standard Node-Locked License Activation for Mocha Pro Standalone

When you purchase your license, you will be emailed a serial number. To activate:

. Make sure you are connected to the internet
. Open Mocha and choose 'Activate' from the welcome screen or 'Activate nodelocked License' from the help menu.
. The BorisFX License Tool will load. Choose "Activate your license now":
image:UserGuide/en_US/images/mochapro_license_tool_001.jpg[]
. Paste the serial number into the available activation field and click 'Continue'
image:UserGuide/en_US/images/mochapro_license_tool_002.jpg[]
. If the activation is successful, details will appear on the next page:
image:UserGuide/en_US/images/mochapro_license_tool_003.jpg[]
. Your license should now be installed and Mocha will close to reset into a licensed state:
image:UserGuide/en_US/images/mochapro_license_tool_004.jpg[]
. Reopen Mocha to start using your licensed version!

If your machine is not connected to the internet, or you are behind a firewall:

. Open Mocha and choose 'Activate' from the welcome screen or 'Activate nodelocked license' from the help menu.
. . The BorisFX License Tool will load. Choose "Activate your license manually" from the alternative options:
image:UserGuide/en_US/images/mochapro_license_tool_001.jpg[]
. You will be provided with file fields to load a key file:
image:UserGuide/en_US/images/mochapro_license_tool_005.jpg[]
. Download and save the key file that you received from your license email from a computer that has Internet connection.
. Transfer the key file to your offline machine you are going to activate via a flash/thumb drive or a shared network.
. Select the location of the key file in the first field.
. Pick a location for the request file (which will be created) in the second field.
. Copy the request file (.req) to a machine with an Internet connection.
. Upload it to http://activation.borisfx.com/offline-activation.php.
. Save the activation file it returns (via download or email), and copy that back to the offline machine.
. Enter its location into to the license tool:
image:UserGuide/en_US/images/mochapro_license_tool_005.jpg[]
. Your license should install automatically and Mocha will close.
. Reopen Mocha to start using your licensed version!

==== Standard Node-Locked License Activation for Mocha Pro Plugin

First locate the licensing button for your host plugin.

===== Adobe After Effects Plugin License

For After Effects this is called "License..." and sits on the bar of the effect title in your Effect Controls:
image:UserGuide/en_US/images/5.0.0_mochapro_ae_plugin_license_control.jpg[width="60%"]

===== Adobe Premiere Plugin License

For Premiere, click the small icon next to the effect title:
image:UserGuide/en_US/images/5.0.0_mochapro_premiere_plugin_license_control.jpg[width="60%"]

===== Avid Media Composer

For Avid, click the 'License Control' checkbox under the 'License and Registration' section at the bottom of the plugin controls:
image:UserGuide/en_US/images/5.0.0_mochapro_avid_plugin_license_control.jpg[width="60%"]

After that, the rest is the same as the process above for Mocha standalone. See "Standard Node-Locked License Activation for Mocha Pro Standalone" for more details.

We recommend restarting the host if you see any issues with licensing.


==== Node-Locked License Troubleshooting

. It is important that your Mocha software matches your activation code, so check your purchase order to make sure everything matches up version wise. It may be that you don’t have the correct version of Mocha installed from our download section. This is especially important for legacy software before V5, where a different licensing method is used.
. If you are attempting to install via a terminal instead of directly on the machine itself and you are having trouble getting Mocha to install, try installing directly on the machine.
. Check to make sure you are not restricted to using certain ports due to a firewall or other admin permissions. When in doubt, temporarily turn your firewalls off for the duration of the installation and then turn them back on when you are done.
. Troubleshoot your machine; try uninstalling all your Mocha software, restarting your machine, and installing the software again from scratch, and make sure you follow installation directions off our website exactly. It sounds redundant, but sometimes it’s a great way to figure out what is going on inside your machine.
. If all else fails, our support team is happy to help you figure this out. Please contact support!
